[package]
name = "unin-bin"
version = "0.1.1"
edition = "2024"
readme = "README.md"
license = "MIT"
license-file = "LICENSE"
repository = "https://github.com/notchapplez/unin.rs"
description = "A universal installer for many languages so you don't have to remember any command"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
colored = "3.1.1"
dialoguer = "0.12.0"
libc = "0.2.184"
num_cpus = "1.17.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["default"] }
time = { version = "0.3.47", features = ["parsing", "macros", "formatting"] }
path-absolutize = "3.1.1"
walkdir = "2.5.0"
makefile-lossless = "0.3.34"
